--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^15.0.7",
+    "ts-jest": "^29.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
